--- a/src/index.css
+++ b/src/index.css
@@ -35,9 +35,7 @@
   display: flex;
   align-items: center;
   justify-content: justify;
-  /* not necessary */
-  width: fit-content;
-  flex-wrap: wrap;
+  
   cursor: pointer;
   
 }
@@ -105,6 +103,7 @@
 }
 .card h4{
   margin-left: 5px;
+  font-size: larger;
 }
 .card h5{
   font-size: 16px;
